# commit-msg-jira-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre_commit_tool_runner  .tox_env_exe_runner.py  CHANGELOG.rst  README.rst  azure-pipelines.yml  check_jira_tag.py  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.pre-commit-scripts/: run_mypy  run_pylint
commit_msg_jira_hook/: check_jira_tag.py
docs/.changes/: template.jinja2
src/commit_msg_jira_hook/: __init__.py  add_jira_tag.py  check_jira_tag.py
tests/: test_add_jira_tag.py  test_check_jira_tag.py
