[metadata]
name = commit-msg-jira-hook
description = commit-msg hook for jira issue verification with pre-commit.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Cielquan/commit_msg_jira_hook
author = Christian Riedel
license = GPL-3.0
license_file = LICENSE.rst
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Version Control :: Git
keywords = pre-commit, hook, git, commit-msg
maintainer = Christian Riedel
maintainer-email = cielquan@protonmail.com
project_urls =
    Source=https://github.com/Cielquan/commit_msg_jira_hook
    Tracker=https://github.com/Cielquan/commit_msg_jira_hook/issues


[options]
py_modules = check_jira_tag
install_requires =
    jira >= 2, <3
python_requires = ~=3.6


[options.entry_points]
console_scripts =
    jira_commit_msg = check_jira_tag:main


[bdist_wheel]
universal = 0
